Add new files and update index.html and styling.css

--- a/index.html
+++ b/index.html
@@ -1,7 +1,29 @@
----
-# You don't need to edit this file, it's empty on purpose.
-# Edit theme's home layout instead if you wanna make some changes
-# See: https://jekyllrb.com/docs/themes/#overriding-theme-defaults
-layout: home
-author_profile: true
----
+<!DOCTYPE html>
+<html>
+    <head>
+        <title>Marius Roiban</title>
+        <link rel="stylesheet" href="styling.css">
+    </head>
+    <body>
+        <div class="site">
+            <div class="header">
+                <a href="" class="logo-href">
+                    <img class="logo-img" src="assets/logo-crop.png">
+                </a>
+            </div>
+            <div class="about">
+                <h1>About Me</h1>
+                <p>
+                    I am Marius-Alexandru Roiban, a 22-year-old boy born in <a href="https://maps.app.goo.gl/rSxHdwgd41xpWbKC6">Romania</a> 
+                    and currently living in <a href="https://maps.app.goo.gl/qFVsYKCac3TYDkiX6">Belgium</a>. I am in love with learning
+                    new things constantly, from design to programing. I am currently
+                    studying Computer Science at <a href="https://www.ulb.be/">ULB</a>.
+                </p>
+                </div>
+            <div class="footer">
+                <p id="datetime" class="datetime"></p>
+            </div>
+        </div>
+        <script src="src/time.js"></script>
+    </body>
+</html>
