Update personal information in index.html

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <div class="about">
                 <h1>About Me</h1>
                 <p>
-                    I am Marius-Alexandru Roiban, a 22-year-old boy born in <a href="https://maps.app.goo.gl/rSxHdwgd41xpWbKC6">Romania</a> 
+                    I am Marius-Alexandru Roiban, a 22-year-old man born in <a href="https://maps.app.goo.gl/rSxHdwgd41xpWbKC6">Romania</a> 
                     and currently living in <a href="https://maps.app.goo.gl/qFVsYKCac3TYDkiX6">Belgium</a>. I am in love with learning
                     new things constantly, from design to programing. I am currently
                     studying Computer Science at <a href="https://www.ulb.be/">ULB</a>.
