Update header and add contact section

--- a/index.html
+++ b/index.html
@@ -7,9 +7,12 @@
     <body>
         <div class="site">
             <div class="header">
-                <a href="" class="logo-href">
-                    <img class="logo-img" src="assets/logo-crop.png">
-                </a>
+                <div style="display: flex; align-items: center;">
+                    <a href="" style="margin-top: 50px;" class="logo-href">
+                        <img class="logo-img" src="assets/logo-crop.png">
+                    </a>
+                    <p id="datetime" class="datetime" style="margin-left: 20px;"></p>
+                </div>
             </div>
             <div class="about">
                 <h1>About Me</h1>
@@ -19,7 +22,14 @@
                     new things constantly, from design to programing. I am currently
                     studying Computer Science at <a href="https://www.ulb.be/">ULB</a>.
                 </p>
-                </div>
+            </div>
+            <div style="margin-top: 50px;">
+            <div class="contact">
+                <h1>Get in touch!</h1>
+                <p>
+                    You can find me on <a href="https://www.linkedin.com/in/marius-alexandru-roiban-303715224/">LinkedIn</a>, DM me on <a href="https://x.com/Woertheus">X.com</a>, or send me an old-fashioned <a href="mailto:roiban.marius.alexandru@gmail.com">email</a>.
+                </p>
+            </div>
             <div class="footer">
                 <p id="datetime" class="datetime"></p>
             </div>
