Add text diffusion animation, popup handling, and post routing functionality
- Implemented `diffusion.js` for animated text effects on elements with the class `diffuse-text`.
- Created `popup.js` to manage popups on hover, including mobile responsiveness and cleanup on hash changes.
- Developed `posts.js` to handle dynamic loading and rendering of posts with support for YAML front matter, including hidden posts and footnotes.
- Enhanced post rendering with formatted content, images, and error handling for 404 scenarios.

--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <link rel="icon" type="image/png" href="https://url.roiban.xyz/roiban-ico">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Roiban - CV</title>
-    <link rel="stylesheet" href="styles.css">
-    <link rel="stylesheet" href="posts.css">
+    <link rel="stylesheet" href="./public/styles.css">
+    <link rel="stylesheet" href="./public/posts.css">
     <script src="https://unpkg.com/htmx.org@1.9.10"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.29.0/prism.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.29.0/components/prism-python.min.js"></script>
@@ -14,9 +14,9 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.29.0/components/prism-c.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.29.0/components/prism-cpp.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.29.0/components/prism-java.min.js"></script>
-    <script src="diffusion.js"></script>
-    <script src="popup.js"></script>
-    <script src="posts.js"></script>
+    <script src="./src/diffusion.js"></script>
+    <script src="./src/popup.js"></script>
+    <script src="./src/posts.js"></script>
 </head>
 <body>
     <div class="container">
