Update link in index.html to use a relative URL for the Portable Extensible Machine

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                     </ul>
                 </li>
                 <li class="link">
-                    <a href="https://dev.roiban.xyz/#portable-extensible-machine" class="diffuse-text link popup" data-popup-ids="pmx_preview" data-popup-rotation-start="-12" data-popup-rotation-end="12">PMX, a fantasy Personal Computer made from scratch in C</a>
+                    <a href="/#portable-extensible-machine" class="diffuse-text link popup" data-popup-ids="pmx_preview" data-popup-rotation-start="-12" data-popup-rotation-end="12">PMX, a fantasy Personal Computer made from scratch in C</a>
                 </li>
                 <li class="link">
                     <a href="https://github.com/MRoiban/i18n-Automatic-Translator" class="diffuse-text link popup" data-popup-ids="i18n_preview,translator_preview" data-popup-rotation-start="0" data-popup-rotation-end="-20">i18n Translator, a mass translation (python) program using AI</a>
